--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "hypothesis>=6.139.2",
+    "ipywidgets>=8.1.7",
     "jupyterlab>=4.4.7",
     "kagglehub>=0.3.13",
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "pandera[pandas]>=0.26.1",
+    "pyarrow>=21.0.0",
     "pytest>=8.4.2",
     "ruff>=0.13.1",
     "seaborn>=0.13.2",
